--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,7 +46,7 @@ jobs:
 
       - name: Run type checking
         run: |
-          mypy src/ --ignore-missing-imports
+          mypy src/ --ignore-missing-imports --no-strict-optional
 
       - name: Run tests
         run: |
